--- a/style.css
+++ b/style.css
@@ -348,6 +348,7 @@
     background-color: rgba(255, 255, 255, 0.4);
     background-blend-mode: lighten;
     background-size: cover;
+    background-position-x: 30%;
   }
   main h1{
     font-size: 20px;
