--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
     background-color: #fff;
     width: 100%;
   }
+  body.noscroll{
+    overflow: hidden;
+  }
   nav{
     display: flex;
     justify-content: space-around;
@@ -128,13 +131,14 @@
     align-items: center;
     background-color: #fff;
     font-family: 'Poppins', sans-serif;
+    max-height: 500px;
   }
   .about img {
     width: 200px;
     height: 200px;
     border-radius: 50%;
     object-fit: cover;
-    margin: 40px 0 0;
+    margin-top: 20px;
   }
   .about-me{
     padding: 10px;
@@ -149,7 +153,7 @@
   }
   .about-me h2{
     font-size: 30px;
-    margin: 0 auto 30px;
+    margin: 0 auto;
   }
   .about-me p{
     font-size: 14px;
@@ -188,15 +192,17 @@
     object-fit: cover;
     border: 1px solid #000;
   }
-
-  .form{
-    height: 30vh;
-    text-align: center;
+  .work a{
+    color: blue;
+    text-decoration: none;
   }
-  .form h2{
-    margin-top: 100px;
+  .github{
+    margin: 10px auto;
+    border: 1px solid #000;
+    border-radius: 4px;
+    width: 100px;
+    background-color: #fff;
   }
-
   .skills{
     margin: 30px auto;
     text-align: center;
@@ -449,6 +455,16 @@
   }
   .work a{
     color: blue;
+    text-decoration: none;
+  }
+  .github{
+    text-decoration: none;
+    text-align: center;
+    margin: 10px auto;
+    border: 1px solid #000;
+    border-radius: 4px;
+    width: 100px;
+    background-color: #eeeeee;
   }
   .skill h2{
     text-align: center;
