--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@
     text-align: center;
     padding-top: 30px;
     font-size: 30px;
+    padding-bottom: 10px;
+    width: 30%;
+    margin: 0 auto;
+    border-bottom: 1px solid #000;
   }
   .worksf{
     margin-top: 30px;
@@ -196,6 +200,13 @@
     color: blue;
     text-decoration: none;
   }
+  .skills h2{
+    padding-bottom: 10px;
+    font-size: 30px;
+    width: 30%;
+    margin: 0 auto;
+    border-bottom: 1px solid #000;
+  }
   .github{
     margin: 10px auto;
     border: 1px solid #000;
@@ -217,6 +228,32 @@
     width: 100px;
     height: 100px;
     object-fit: cover;
+  }
+
+  footer{
+    background-color: #000;
+    padding: 30px 20px;
+  }
+  footer p{
+    display: none;
+  }
+  .nav-link{
+    display: flex;
+    justify-content: space-around;
+  }
+  .nav-link a{
+    color: #fff;
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 14px;
+  }
+  .nav-link li{
+    list-style: none;
+    margin-right: 10px;
+  }
+  #top{
+    display: none;
   }
 }
 @media screen and (min-width: 481px){
@@ -404,6 +441,10 @@
     text-align: center;
     padding-top: 40px;
     font-size: 40px;
+    padding-bottom: 10px;
+    width: 20%;
+    margin: 0 auto;
+    border-bottom: 2px solid #000;
   }
   .worksf{
     display: flex;
@@ -443,21 +484,36 @@
     width: 100px;
     background-color: #eeeeee;
   }
+  .skills{
+    background-image: url(img/shibuya-min.jpeg);
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0.3);
+    background-blend-mode: lighten;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: bottom;
+    padding-bottom: 30px;
+  }
   .skill h2{
     text-align: center;
     font-size: 40px;
     font-weight: 100;
     padding-top: 50px;
+    padding-bottom: 10px;
+    width: 20%;
+    margin: 0 auto;
+    border-bottom: 2px solid #000;
   }
   .lang{
     display: flex;
     justify-content: space-around;
     margin: 60px auto 0;
     width: 70%;
-    background-color: #fff;
+    background-color: #000;
     text-align: center;
     padding: 20px;
     border-radius: 10px;
+    color: #fff;
   }
   .lang img{
     width: 150px;
@@ -469,6 +525,27 @@
     margin: auto 0;
     text-align: left;
   }
+  footer{
+    height: 8vh;
+    background-color: #000;
+  }
+  footer p{
+    text-align: center;
+  }
+  footer a{
+    color: #fff;
+    text-align: center;
+    line-height: 8vh;
+    text-transform: uppercase;
+  }
+  footer a:hover{
+    cursor: pointer;
+    opacity: .4;
+  }
+  .nav-link{
+    display: none;
+  }
+
 }
 
 @media screen and (max-width: 1200px) {
